<resources>
    <string name="app_name" translatable="false">emoncms</string>
    <string name="google_app_id" translatable="false">605929908164</string>

    <string name="tag_settings_fragment" translatable="false">settings_fragment</string>
    <string name="tag_me_fragment" translatable="false">myelectric_main_fragment</string>
    <string name="tag_me_settings_fragment" translatable="false">myelectric_settings_fragment</string>
    <string name="tag_ms_fragment" translatable="false">mysolar_main_fragment</string>
    <string name="tag_ms_settings_fragment" translatable="false">mysolar_settings_fragment</string>

    <string name="setting_url" translatable="false">emoncms_url</string>
    <string name="setting_apikey" translatable="false">emoncms_apikey</string>
    <string name="setting_usessl" translatable="false">emoncms_usessl</string>
    <string name="setting_keepscreenon" translatable="false">keep_screen_on</string>
    <string name="setting_language" translatable="false">language</string>

    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">Français</string>
    <string name="german" translatable="false">Deutsch</string>

    //
    //  TRANSLATABLE
    //
    <string name="me_title">My Electric</string>
    <string name="me_settings_title">My Electric Feeds</string>

    <string name="ms_title">My Solar</string>
    <string name="ms_settings_title">My Solar Feeds</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="cost_label">kWh / Cost</string>
    <string name="power_now_label">NOW</string>
    <string name="use_today_label">TODAY</string>
    <string name="inside_label">Inside</string>
    <string name="outside_label">Outside</string>
    <string name="solar_pv_label">SOLAR PV</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="error">Error</string>
    <string name="settings">Settings</string>

    <string name="server_not_configured">Please configure your emoncms server and API key from the settings menu.</string>
    <string name="me_not_configured_text">Please select feeds to display using the cog icon in the toolbar.</string>
    <string name="feed_download_error_message">Unable to download feed list. Please check URL and API settings as well as connectivity to emoncms.</string>
    <string name="invalid_number_of_responses">Invalid number of responses from API</string>
    <string name="invalid_kwh_feedid">Invalid use_kwh feed ID, please select a kwh feed from the configuration menu</string>
    <string name="invalid_watt_feedid">Invalid use feed ID, please select a watt feed from the configuration menu</string>

    <string name="txt_power_default">0</string>
    <string name="use_today_default">0.0</string>
    <string name="txt_geysertemp_default">0°C</string>
    <string name="txt_collectortemp_default">0°C</string>

    <string name="button_3h_label">3H</string>
    <string name="button_6h_label">6H</string>
    <string name="button_1d_label">D</string>
    <string name="button_7d_label">W</string>
    <string name="button_30d_label">M</string>

    <string name="connection_error">CONNECTION ERROR</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">The barcode scanner uses the camera and cannot run because it does not have permission.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="qr_code_success">Settings saved from QR code successfully</string>
    <string name="qr_code_fail">Invalid QR code</string>
    <string name="barcode_scan_instructions">"Scan the barcode on the My account page of emoncms."</string>

    <string name="monday_initial">M</string>
    <string name="tuesday_initial">T</string>
    <string name="wednesday_initial">W</string>
    <string name="thursday_initial">T</string>
    <string name="friday_initial">F</string>
    <string name="saturday_initial">S</string>
    <string name="sunday_initial">S</string>

    <string name="system_locale">System Locale</string>
    <string name="dollars">Dollars</string>
    <string name="pounds">Pounds</string>
    <string name="euros">Euros</string>
    <string name="yen">Yen</string>

    <string name="kwh_elapsed">kWh elapsed</string>
    <string name="wh_elapsed">Watt hours elapsed</string>

    <string name="chart_no_data_available">No data available</string>

    <string name="settings_title_emoncms_connectivity">EMONCMS CONNECTIVITY</string>
    <string name="settings_title_app_settings">APP SETTINGS</string>
    <string name="settings_title_scanqrcode">Scan QR Code</string>
    <string name="settings_summary_scanqrcode">Allows filling in the connectivity fields automatically using the QR code on the emoncms account page</string>
    <string name="settings_title_emoncms_url">emoncms URL</string>
    <string name="settings_summary_emoncms_url">Full emoncms URL without http://. e.g. www.myawesomesite.com/emoncms"</string>
    <string name="settings_title_emoncms_apikey">emoncms API KEY</string>
    <string name="settings_summary_emoncms_apikey">Read API key from the emoncms My Account page.</string>
    <string name="settings_title_emoncms_usessl">Use SSL</string>
    <string name="settings_summary_emoncms_usessl">Connect using https, supported by emoncms.org NOT emonPi"</string>
    <string name="settings_title_keep_screen_on">Keep Screen On</string>
    <string name="settings_summary_keep_screen_on">Stops the device screen powering off</string>
    <string name="settings_title_language">Language</string>
    <string name="settings_summary_language">Select Language</string>

    <string name="settings_title_myelectric_feeds">Feeds</string>
    <string name="settings_title_myelectric_currency">Currency</string>
    <string name="settings_title_myelectric_power_feed">Power feed (Watts)</string>
    <string name="settings_title_myelectric_power_feed2">Power feed 2(Watts)</string>
    <string name="settings_title_myelectric_kwh_feed">"Bar graph feed (kWh)</string>
    <string name="settings_title_myelectric_geyser_feed">Geyser Temperature feed</string>
    <string name="settings_title_myelectric_collector_feed">Collector Temperature feed</string>
    <string name="settings_title_myelectric_geyserflags_feed">Geyser flags feed</string>
    <string name="settings_title_myelectric_inside_feed">Inside Temperature feed</string>
    <string name="settings_title_myelectric_outside_feed">Outside  Temperature feed</string>
    <string name="settings_title_myelectric_voltage_feed">Voltage feed</string>
    <string name="settings_title_myelectric_frequency_feed">Frequency feed</string>
    <string name="settings_title_myelectric_escale">Wh or kWh Feed</string>
    <string name="settings_title_myelectric_unit_cost">Cost</string>
    <string name="settings_title_myelectric_cost_symbol">Cost Unit</string>

    <string name="system_default">System Default</string>
    <string name="no_camera_found">No camera found for barcode scanning.</string>
</resources>