<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:animateLayoutChanges="true"
                tools:context=".MainActivity"
                android:weightSum="1">
    <TextView
        android:id="@+id/txtPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_power_default"
        android:textColor="@color/textColorBlue"
        android:textSize="@dimen/main_stats_text_size"
        android:textStyle="bold"
        android:lineSpacingExtra="0dp"
        android:includeFontPadding="false"
        android:layout_alignBottom="@+id/txtUseToday"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/powerUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/txtPower"
        android:textColor="@color/textColorBlue"
        android:text="W"
        android:textSize="@dimen/stats_units_text_size"
        android:textStyle="bold"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/powerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/powerUnits"
        android:layout_toRightOf="@id/txtPower"
        android:text="@string/power_now_label"
        android:textColor="@color/lightGrey"
        android:textSize="@dimen/main_header_text_size"
        android:textStyle="bold"
        android:lineSpacingExtra="0dp"
        android:includeFontPadding="false"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="3dp" />
    <TextView
        android:id="@+id/txtVoltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPower"
        android:textColor="@color/textColorBlue"
        android:text="230.0V"
        android:textSize="@dimen/stats_units_text_size"
        android:textStyle="bold"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/txtFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtVoltage"
        android:textColor="@color/textColorBlue"
        android:layout_below="@id/txtPower"
        android:text="49.9Hz"
        android:textSize="@dimen/stats_units_text_size"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="0dp" />

    <!-- use today -->
    <TextView
        android:id="@+id/useTodayUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="kWh"
        android:textColor="@color/textColorBlue"
        android:textSize="@dimen/stats_units_text_size"
        android:textStyle="bold"
        android:lineSpacingExtra="0dp"
        android:includeFontPadding="false"
        android:layout_above="@+id/powerLabel"
        android:layout_alignLeft="@+id/useTodayLabel"
        android:layout_alignStart="@+id/useTodayLabel" />

    <TextView
        android:id="@+id/useTodayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_today_label"
        android:textColor="@color/lightGrey"
        android:textSize="@dimen/main_header_text_size"
        android:textStyle="bold"
        android:paddingBottom="0dp"
        android:lineSpacingExtra="0dp"
        android:includeFontPadding="false"
        android:layout_alignTop="@+id/powerLabel"
        android:layout_toRightOf="@+id/txtUseToday"
        android:layout_marginLeft="2dp" />

            <TextClock
                android:id="@+id/textClock1"
                android:includeFontPadding="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="#17d409"
                android:format12Hour="hh:mm"
                android:format24Hour="hh:mm"
                android:textSize="@dimen/main_stats_text_size"
                android:textStyle="bold"
                android:gravity="end"/>


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart1"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/view"
        android:layout_toStartOf="@+id/view"
        android:layout_below="@+id/txtVoltage" />
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart2"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/view"
        android:layout_toStartOf="@+id/view"
        android:layout_alignTop="@+id/txtGeyserTemp"
        android:visibility="gone"/>

    <View
        android:layout_height="120dp"
        android:layout_width="100dp"
        android:background="@drawable/geyser"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/view" />

    <TextView
        android:id="@+id/txtGeyserTemp"
        android:textSize="@dimen/other_stats_text_size"
        android:text="@string/txt_geysertemp_default"
        android:textColor="@color/textColorBlue"
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <RelativeLayout
        android:id="@+id/buttonPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/chart1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/btnChart1_3H"
            style="@style/ChartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_3h_label"/>

        <Button
            android:id="@+id/btnChart1_6H"
            style="@style/ChartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_6h_label"
            android:layout_toRightOf="@id/btnChart1_3H"/>

        <Button
            android:id="@+id/btnChart1_D"
            style="@style/ChartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnChart1_6H"
            android:text="@string/button_1d_label"/>

        <Button
            android:id="@+id/btnChart1_W"
            style="@style/ChartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnChart1_D"
            android:text="@string/button_7d_label"/>

        <Button
            android:id="@+id/btnChart1_M"
            style="@style/ChartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnChart1_W"
            android:text="@string/button_30d_label"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/insideLabel"
        android:text="@string/inside_label"
        android:textSize="@dimen/main_header_text_size"
        android:textColor="@color/lightGrey"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_toLeftOf="@+id/txtInsideTemp"
        android:layout_toStartOf="@+id/txtInsideTemp"
        android:layout_alignTop="@+id/txtInsideTemp"
        android:layout_above="@+id/txtOutsideTemp" />

    <TextView
        android:id="@+id/outsideLabel"
        android:text="@string/outside_label"
        android:textSize="@dimen/main_header_text_size"
        android:textColor="@color/lightGrey"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_toLeftOf="@+id/txtOutsideTemp"
        android:layout_toStartOf="@+id/txtOutsideTemp"
        android:layout_alignTop="@+id/txtOutsideTemp" />

    <TextView
        android:id="@+id/txtOutsideTemp"
        android:textSize="@dimen/other_stats_text_size"
        android:text="@string/txt_collectortemp_default"
        android:textColor="@color/textColorBlue"
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInsideTemp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/txtInsideTemp"
        android:textSize="@dimen/other_stats_text_size"
        android:text="@string/txt_collectortemp_default"
        android:textColor="@color/textColorBlue"
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textClock1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <TextView
        android:id="@+id/txtUseToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_today_default"
        android:textColor="@color/textColorBlue"
        android:textSize="@dimen/main_stats_text_size"
        android:textStyle="bold"
        android:lineSpacingExtra="0dp"
        android:includeFontPadding="false"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/powerLabel"
        android:gravity="right"/>

    <TextView
        android:id="@+id/txtCollectorTemp"
        android:textSize="@dimen/other_stats_text_size"
        android:text="@string/txt_collectortemp_default"
        android:textColor="@color/textColorBlue"
        android:gravity="left|top"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@+id/txtGeyserTemp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/chart1"
        android:layout_toEndOf="@+id/chart1" />


</RelativeLayout>
